k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdfunding-reactjs
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: crowdfunding-reactjs
          image: aryarana/crowdfunding-react-service:v2
          ports:
            - containerPort: 3000
