k8s/dns-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-test-pod
spec:
  containers:
    - name: dns-test-container
      image: busybox
      command:
        - sleep
        - '3600'
