k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdfunding-reactjs
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
